@@ -29,6 +29,7 @@ Permitir aumentar sprites en View Sprites
 Mejorada compilación: opciones --enable-memptr --enable-visualmem --enable-cpustats están activadas por defecto en ./configure
 Mejorado debug cpu history: permitir cambiar el puntero de memoria según el registro PC mostrado en el historial
 Mejorada emulación del Inves Spectrum+: alertar cuando un juego puede resetearse debido al bug de Inves de write-on-interrupt
+Mejorada emulación de Jupiter Ace: permitir escuchar salida MIC
 Mejorado Hexadecimal editor:
 - Ahora los datos se refrescan también cuando la ventana tiene el foco
 - Ahora el puntero de memoria puede seguir una expresión (un registro de la CPU por ejemplo)
