@@ -448,6 +448,7 @@ Conversión de raw a mdr: cortar ignorando gaps y sync. Pero hay que determinar 
 *multiface 128
 
 -separar info byte en array distinto?
+-mascara de puertos microdrive, no solo E7 y EE...
 
 -convertir raw microdrive a mdr que soporte empezar por a mitad de sector y dar la vuelta
 contar el total de bytes leidos en vez de la posicion. dar la vuelta cuando convenga
@@ -458,6 +459,11 @@ al microdrive desde el final?
 -view file info rmd (datos cabecera)
 ok -seleccion de rom interface1: version 1 o 2. Versión 1 formatea a 127k, version 2 a 126k, para mejorar "fiabilidad". Por defecto 2
 -recopilar info microdrive de links utiles
+-preview error en nuevosync300k.rmd
+-quiza en wait solo deberia hacer:
+    if (z80_wait_signal.v) {
+        t_estados++;
+    }
 
 
 -LEC memory extension https://ia600604.us.archive.org/view_archive.php?archive=/1/items/World_of_Spectrum_June_2017_Mirror/World%20of%20Spectrum%20June%202017%20Mirror.zip&file=World%20of%20Spectrum%20June%202017%20Mirror/sinclair/hardware-info/l/LECMemoryExtension.pdf
@@ -472,3 +478,6 @@ https://worldofspectrum.org/archive/software/utilities/cpm-22-for-the-lec-memory
 De hecho hay que hacer que lo haga para que sume t-estados de escritura
 -Tape traps para lec rom? no, los traps funcionan pues tiene rutinas estandard de carga y grabacion
 -Como incluir las lec rom? como alternate? mover todas las alternate a carpeta alternate?
+
+
+-revisar sonido en Save en CPC, MSX...
