@@ -67,8 +67,6 @@ The total available sectors are less than expected.
 I assume something in my timmings are not accurate, or some other error I haven't found
 
 So my current implementation of the sync signal is:
--If the current byte AND (logical AND) previous byte read is 0, sync is disabled
--Otherwise, sync is enabled
 -Reading from status port EF blocks the cpu (enables WAIT signal) until the next byte is read/written, like reading/writing E7 port
 
 I have both algorithms available on my code, with the variable:
@@ -130,8 +128,6 @@ z80_int microdrive_raw_last_read_data;
 //Ultimo dato enviado para escribir
 z80_byte microdrive_raw_last_byte_to_write;
 
-//Temporal imagen del microdrive en raw
-//#define MICRODRIVE_RAW_SIZE 20000
 
 /*
 -definir memoria de 16 bits para el contenido del microdrive:
@@ -147,9 +143,6 @@ Bit 1: a 1 si es un byte defectuoso (o sea en mal estado y que provocara errores
 Bit 2-7: sin uso de momento
 */
 
-//z80_int microdrive_raw_image[MICRODRIVE_RAW_SIZE];
-
-//int microdrive_raw_current_position=0;
 
 
 
@@ -202,12 +195,6 @@ void microdrive_raw_dump_values_dump(void)
 }
 */
 
-//Para detectar secuencias sync. 00 FF FF
-//TODO: esto es simplificado a 3 bytes, ver cual es la secuencia correcta. 6 bytes total? 12 bytes?
-//int microdrive_raw_sync_sequence=0;
-//-1=nada
-//0=leido 00
-//1=leido FF
 
 //Si ultima secuencia leida era sync. Cuando la secuencia esta entera
 int microdrive_raw_last_read_data_is_sync=0;
@@ -225,13 +212,9 @@ z80_byte raw_anterior_leido;
 z80_byte raw_nuevo_sync_lista[8]={0xff,0xff,0xff,0xff,0xff,0xff,0xff,0xff};
 
 
-//Si es 0, puerto EF es bloqueante. Y Sync=0 cuando byte anterior AND actual=0; en caso contrario, sync=1. Esto funciona
-//formateando con la rom del interface1 y con multiface 128
-
-//Si es 1, es el comportamiento teorico de la ULA de la interface1. Aunque NO acaba de formatear con la rom del interface1
-//Puerto EF no es bloqueante. Y sync se activa al detectar secuencia de bytes FF,FF,0,0,0,0,0,0. Sync se pone a 0 al leer gaps
-//Si que acaba de formatear si hago que cuando sync esta activado, el bit 1 (el sync) de retorno del puerto EF es 0. Y si esta desactivado, retorno 1
-//En ese caso formatea pero con menos capacidad. Por lo que asumo que bien del todo tampoco va
+//Si es 0, puerto EF es bloqueante.
+//Si es 1, es el comportamiento teorico de la ULA de la interface1. Puerto EF no es bloqueante.
+//Aunque formatea a menos capacidad con la rom del interface1
 int microdrive_raw_new_sync_algorithm=0;
 
 void microdrive_raw_move(void)
@@ -325,7 +308,7 @@ void microdrive_raw_move(void)
         }
 
 
-        if (microdrive_raw_new_sync_algorithm) {
+
             //Nuevo sync
             //rotar
             //0 el actual, 1 el anterior, 2 el anterior al 2, etc
@@ -338,7 +321,7 @@ void microdrive_raw_move(void)
             raw_nuevo_sync_lista[1]=raw_nuevo_sync_lista[0];
             raw_nuevo_sync_lista[0]=microdrive_raw_last_read_data & 0xFF;
 
-        }
+
 
 
         if ((microdrive_raw_last_read_data & 0x0100)==0) {
@@ -347,11 +330,11 @@ void microdrive_raw_move(void)
             microdrive_raw_last_read_data=0x0000;
 
             //nuevo sync
-            if (microdrive_raw_new_sync_algorithm) {
-                microdrive_raw_last_read_data_is_sync=0; //sync reseteado.
-                printf("reset sync en %d\n",microdrive_status[0].raw_current_position);
 
-            }
+                microdrive_raw_last_read_data_is_sync=0; //sync reseteado.
+                //printf("reset sync en %d\n",microdrive_status[0].raw_current_position);
+
+
 
             //sleep(1);
         }
@@ -360,18 +343,8 @@ void microdrive_raw_move(void)
 
         else {
             //detectar sync
-            if (!microdrive_raw_new_sync_algorithm) {
-            if ( ((microdrive_raw_last_read_data & 0xFF) & raw_anterior_leido)==0) {
-                microdrive_raw_last_read_data_is_sync=0; //sync disabled
-                //printf("Nuevo SYNC\n");
-                //sleep(1);
-            }
-            else microdrive_raw_last_read_data_is_sync=1; //sync enabled
-            }
 
-            if (microdrive_raw_new_sync_algorithm) {
-                //Temporal. Otra manera de detectar sync
-                //saltara sync si 0 es ff, 1 2 y 3 son 0
+
                 if (raw_nuevo_sync_lista[0]==0xFF &&
                     raw_nuevo_sync_lista[1]==0xFF &&
                     raw_nuevo_sync_lista[2]==0x00 &&
@@ -382,7 +355,7 @@ void microdrive_raw_move(void)
                     raw_nuevo_sync_lista[7]==0x00
 
                 ) {
-                        printf("nuevo sync en %d\n",microdrive_status[0].raw_current_position);
+                        //printf("nuevo sync en %d\n",microdrive_status[0].raw_current_position);
 
                         microdrive_raw_last_read_data_is_sync=1; //sync enabled
 
@@ -390,7 +363,7 @@ void microdrive_raw_move(void)
 
 
                 //Fin nuevo sync
-            }
+
 
 
             raw_anterior_leido=microdrive_raw_last_read_data & 0xFF;
